@startuml smart_device
!pragma useIntermediatePackages false

abstract class smart_device.Connectable {
}
class smart_device.SmartDevice {
  _brand: str
  _power_on: bool
}
class smart_device.SmartLight {
  _brightness_level: int
}
smart_device.SmartDevice <|-- smart_device.SmartLight
smart_device.Connectable <|-- smart_device.SmartLight
footer Generated by //py2puml//
@enduml
